--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "@vue/composition-api": "^0.5.0",
+    "axios": "^0.19.2",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.12.0",
@@ -22,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
     "typescript": "^3.4.3",
+    "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10"
   }
 }
